# Switcharoo

./: README.md
backend/: Cargo.toml  switcharoo.env
backend/src/: main.rs
backend/src/models/: mod.rs
backend/src/models/config/: mod.rs
backend/src/models/password/: mod.rs
backend/src/models/session/: mod.rs
backend/src/models/user/: mod.rs
backend/src/routes/user/: create.rs  login.rs  mod.rs  structs.rs  verify.rs
