[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = "0.4.38"
dotenv = "0.15.0"
email_address = "0.2.5"
env-extract = "0.1.22"
moka = { version = "0.12.7", features = ["future"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
